# django-square

./: pyproject.toml
square/: admin.py  models.py  utils.py
square/management/commands/: load_square_invoice.py
